syntax = "proto3";
package GrpcService;

service MsgService{
  rpc GetList(GetMsgListRequest) returns (GetMsgListReply){}
  rpc GetOne(GetMsgOneRequest) returns (GetMsgOneReply){}
  rpc Edit(EditMsgRequest) returns (EditMsgReply){}
  rpc Remove(RemoveMsgRequest) returns (RemoveMsgReply){}
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message GetMsgListRequest {
  int64 UserId = 1;
  string Title = 2;
  int64 StartTime = 3;
  int64 EndTime = 4;
}

message GetMsgListReply {
  message MsgItem {
    string Id = 1;
    string Title = 2;
    string Content = 3;
    int64 UserId = 4;
    int64 Time = 5;
  }
  repeated MsgItem Items = 1;
  int64 Count = 2;
  bool IsSuccess = 3;
  string ErrorMsg = 4;
}

message GetMsgOneRequest {
  string Id = 1;
}

message GetMsgOneReply {
  string Id = 1;
  string Title = 2;
  string Content = 3;
  int64 UserId = 4;
  int64 Time = 5;
  bool IsSuccess = 6;
  string ErrorMsg = 7;
}

message EditMsgRequest {
  string Id = 1;
  string Title = 2;
  string Content = 3;
}

message EditMsgReply {
  bool IsSuccess = 1;
  string ErrorMsg = 2;
}

message RemoveMsgRequest {
  string Id = 1;
}

message RemoveMsgReply {
  bool IsSuccess = 1;
  string ErrorMsg = 2;
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}